# ffq-api

./: Dockerfile  LICENSE  Makefile  README.md  act-test.sh  act.json  launch.sh  setup.cfg  setup.py  tag-and-push.sh
.github/: Makefile  tag-and-push.sh
.github/actions/deploy/: action.yml
.github/workflows/: build.yml  deploy-prod.yml
src/biodataexplorer/: __init__.py  app.py
src/ffq_api/: __init__.py  app.py
