[metadata]
name = biodataexplorer
version = attr: biodataexplorer.__version__
url = https://github.com/ewels/biodataexplorer
project_urls =
    Documentation = https://github.com/ewels/biodataexplorer
    Source Code = https://github.com/ewels/biodataexplorer
    Issue Tracker = https://github.com/ewels/biodataexplorer/issues/
license = MIT
license_files = LICENSE
author = Phil Ewels
author_email = phil@seqera.io
maintainer = Phil Ewels
maintainer_email = phil@seqera.io
description = API to explore and download data from various sources
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    biodataexplorer = biodataexplorer.app:app

[options.packages.find]
where = src

# Dependencies are in setup.py for GitHub's dependency graph.
