[metadata]
name = ffq-api
version = attr: ffq_api.__version__
url = https://github.com/seqeralabs/ffq-api
project_urls =
    Documentation = https://github.com/seqeralabs/ffq-api
    Source Code = https://github.com/seqeralabs/ffq-api
    Issue Tracker = https://github.com/seqeralabs/ffq-api/issues/
license = MIT
license_files = LICENSE
author = Phil Ewels
author_email = phil@seqera.io
maintainer = Phil Ewels
maintainer_email = phil@seqera.io
description = API to explore and download data from public sources, using ffq
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.7

[options.packages.find]
where = src

# Dependencies are in setup.py for GitHub's dependency graph.
