[metadata]
name = ffq-api
url = https://github.com/seqeralabs/ffq-api
project_urls =
    Documentation = https://github.com/seqeralabs/ffq-api
    Source Code = https://github.com/seqeralabs/ffq-api
    Issue Tracker = https://github.com/seqeralabs/ffq-api/issues/
license = MIT
license_files = LICENSE
author = Phil Ewels
author_email = phil@seqera.io
maintainer = Phil Ewels
maintainer_email = phil@seqera.io
description = API to explore and download data from public sources, using ffq
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.7
install_requires =
    fastapi>=0.68.0
    pydantic>=1.8.0
    uvicorn>=0.15.0
    git+https://github.com/pachterlab/ffq@devel

[options.packages.find]
where = src
